<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home_entry"
        />

        <item
                android:id="@+id/nav_departures"
                android:icon="@drawable/ic_departures"
                android:title="@string/menu_departures_entry"
        />

        <item
                android:id="@+id/nav_arrivals"
                android:icon="@drawable/ic_arrival"
                android:title="@string/menu_arrivals_entry"
        />
    </group>

    <item
        android:title="Other">
        <menu>
            <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/menu_profile_entry"
            />
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings_entry"
            />
        </menu>
    </item>
</menu>